# squidback-android

./: .gitignore  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FeedbackFilter.cpp  ReactiveFilter.cpp  ReactiveFilter.h  ReactiveFilterController.cpp  ReactiveFilterController.h  SpectrumVisualizer.cpp  scales.h
app/src/main/java/com/superpowered/effect/: MainActivity.java  Preferences.java  Preset.java
app/src/main/java/eu/gianlucaelia/squidback/: MainActivity.java  Preferences.java  Preset.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
